k8s/adguard/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
        - name: adguard
          image: adguard/adguardhome:latest
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          volumeMounts:
            - name: work
              mountPath: /opt/adguardhome/work
              subPath: work
            - name: conf
              mountPath: /opt/adguardhome/conf
              subPath: conf
      volumes:
        - name: work
          persistentVolumeClaim:
            claimName: adguard-data
        - name: conf
          persistentVolumeClaim:
            claimName: adguard-data
