k8s/adguard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
spec:
  type: ClusterIP
  selector:
    app: adguard
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
